GitVersion1/objects/RequestLineItem__c.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Request__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>To store account name</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Value_Display__c</fullName>
        <label>Existing Value Display</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Existing_Value__c</fullName>
        <label>Existing Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Value_Display__c</fullName>
        <label>New Value Display</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Request Line Items</relationshipLabel>
        <relationshipName>Request_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Selected_Account_Id__c</fullName>
        <label>Selected Account Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <label>Team Member</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id_To_Be_Removed__c</fullName>
        <label>User Id To Be Removed</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Request Line Item</label>
    <nameField>
        <displayFormat>RL-{000}</displayFormat>
        <label>Request Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>